anneal/tests/fixtures/reject_safe_requires/expected.stderr
  ⚠ unused variable: `x`
    ╭─[[PROJECT_ROOT]/src/lib.rs:13:31]
 12 │ /// ```
 13 │ pub fn multiple_requires_safe(x: u32, y: u32) {}
    ·                               ┬
    ·                               ╰── 
    ╰────
  help: if this is intentional, prefix it with an underscore

  ⚠ unused variable: `y`
    ╭─[[PROJECT_ROOT]/src/lib.rs:13:39]
 12 │ /// ```
 13 │ pub fn multiple_requires_safe(x: u32, y: u32) {}
    ·                                       ┬
    ·                                       ╰── 
    ╰────
  help: if this is intentional, prefix it with an underscore

[External Error] generated/RejectSafeRequiresRejectSafeRequirese368e24593512196/RejectSafeRequiresRejectSafeRequirese368e24593512196.lean: Type mismatch
  spec
has type
  True → safe_with_requires ⦃ ret_ => True ⦄
but is expected to have type
  safe_with_requires ⦃ ?m.2 ⦄
[External Error] generated/RejectSafeRequiresRejectSafeRequirese368e24593512196/RejectSafeRequiresRejectSafeRequirese368e24593512196.lean: Type mismatch
  spec ?m.5 ?m.6
has type
  ↑?m.5 > 0 → ↑?m.6 > 0 → multiple_requires_safe ?m.5 ?m.6 ⦃ ret_ => True ⦄
but is expected to have type
  multiple_requires_safe ?m.2 ?m.3 ⦃ ?m.4 ⦄
Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
